--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "date-fns": "^2.16.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
@@ -46,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.15.1"
+    "@date-io/date-fns": "^1.3.13",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@material-ui/pickers": "^3.2.10"
   }
 }
