--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-swipeable": "^6.0.1",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1",
+    "swiper": "^6.4.15",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
