--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "date-fns": "^2.16.1",
+    "google-map-react": "^2.1.9",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
@@ -24,7 +25,9 @@
     "react-swipeable": "^6.0.1",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1",
+    "supercluster": "^7.1.3",
     "swiper": "^6.4.15",
+    "swr": "^0.5.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -54,6 +57,8 @@
   "devDependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@material-ui/pickers": "^3.2.10"
+    "@material-ui/pickers": "^3.2.10",
+    "react-google-autocomplete": "^2.1.2",
+    "use-supercluster": "^0.2.9"
   }
 }
