--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@reduxjs/toolkit": "^1.6.0",
     "react-google-autocomplete": "^2.1.2",
     "react-redux": "^7.2.4",
-    "use-supercluster": "^0.2.9"
+    "use-supercluster": "^0.2.9",
+    "yup": "^0.32.9"
   }
 }
