feat: Add useForm hook

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@material-ui/pickers": "^3.2.10",
     "@reduxjs/toolkit": "^1.6.0",
+    "formik": "^2.2.9",
     "react-google-autocomplete": "^2.1.2",
     "react-redux": "^7.2.4",
     "use-supercluster": "^0.2.9",
