--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-scripts": "4.0.1",
     "react-swipeable": "^6.0.1",
     "react-transition-group": "^4.4.1",
-    "redux": "^4.1.0",
+    "react-redux": "7.2.0",
+    "redux": "4.0.5",
     "redux-logger": "^3.0.6",
     "styled-components": "^5.2.1",
     "supercluster": "^7.1.3",
